--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,6 @@
   "lockFileMaintenance": {
     "enabled": true
   },
-  "schedule": ["at any time"]
+  "schedule": ["at any time"],
+  "dependencyDashboard": true
 }
