--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "nix": {
-    "enabled": true
+    "enabled": false
   },
   "lockFileMaintenance": {
     "enabled": true
