Add some test cases for the devbox renovate manager

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,12 @@
   "lockFileMaintenance": {
     "enabled": true
   },
+  "packageRules": [
+    {
+      "commitMessageTopic": "Node.js",
+      "matchDepNames": ["node", "nodejs", "@types/node"]
+    }
+  ],
   "schedule": ["at any time"],
   "dependencyDashboard": true
 }
