--- a/devbox-3/package.json
+++ b/devbox-3/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node": "18"
+    "node": "^18.12.0"
   },
   "devDependencies": {
-    "@types/node": "18"
+    "@types/node": "^18.12.0"
   }
 }
