Increase limits to allow more testing

--- a/renovate.json
+++ b/renovate.json
@@ -14,5 +14,7 @@
     }
   ],
   "schedule": ["at any time"],
-  "dependencyDashboard": true
+  "dependencyDashboard": true,
+  "prConcurrentLimit": 100,
+  "prHourlyLimit": 100
 }
