Add some ruby setup for testing

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,11 @@
       "groupName": "nodejs",
       "commitMessageTopic": "Node.js",
       "matchPackagePatterns": ["^node$", "^nodejs$", "^@types/node$"]
+    },
+    {
+      "groupName": "ruby",
+      "commitMessageTopic": "Ruby",
+      "matchPackagePatterns": ["^ruby$"]
     }
   ],
   "schedule": ["at any time"],
