Add rubygems to group

--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
     {
       "groupName": "ruby",
       "commitMessageTopic": "Ruby",
-      "matchPackagePatterns": ["^ruby$"]
+      "matchPackagePatterns": ["^ruby$", "^rubygems$"]
     }
   ],
   "schedule": ["at any time"],
